# NukeSoundEditor

./: README.md  menu.py  pyproject.toml
sound_editor/: controller.py  model.py  test.py  view.py
src/nukesoundeditor/: __init__.py  controller.py  model.py  view.py
