[project]
name = "nukesoundeditor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jaap-Jan", email = "jaap-jan.vandegeest@student.ahk.nl" }
]
dependencies = [
    "pyside2>=5.15.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nukesoundeditor"]
